--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="styles.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Bevan:ital@1&family=Fira+Code&display=swap" rel="stylesheet"> </head>
     
 <body>
